fixed position of edit where to next on mobile

--- a/src/components/Dialog/dialog.module.css
+++ b/src/components/Dialog/dialog.module.css
@@ -22,6 +22,13 @@
 
   z-index: 999;
 }
+
+@media (max-width: 500px) {
+  .dialogContent {
+    top: 40%;
+    transform: translate(-50%, -50%);
+  }
+}
 .dialogContent:focus {
   outline: none;
 }
